<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/layoutPadding"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title -->
    <TextView
        android:id="@+id/tvDeleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/inputMarginBottom"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/titleTextSize"
        android:textColor="@color/colorTitle"
        android:text="@string/title_delete" />

    <!-- Name of the file (optional filter) -->
    <EditText
        android:id="@+id/edtName"
        android:hint="@string/hint_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- REAL file URI to delete -->
    <EditText
        android:id="@+id/edtDeleteURL"
        android:hint="@string/hint_file_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Delete file button -->
    <Button
        android:id="@+id/btnDelete"
        android:text="@string/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorButton"
        android:textColor="@color/colorButtonText"
        android:layout_marginTop="@dimen/inputMarginTop" />

    <!-- Return button -->
    <Button
        android:id="@+id/btnReturn"
        android:text="@string/btn_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorButton"
        android:textColor="@color/colorButtonText"
        android:layout_marginTop="@dimen/inputMarginTop" />

</LinearLayout>
